objects/EmploymentWebsite__c.object
<CustomObject>
    <fields>
        <fullName>MaximumBudget__c</fullName>
        <label>MaximumBudget</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricePerCost__c</fullName>
        <label>PricePerCost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WebAddress__c</fullName>
        <label>WebAddress</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>EmploymentWebsite</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EmploymentWebsite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmploymentWebsites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>